5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1643_2443.log
== SUBMITION (2019-04-15 19:27:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
numero = int(input("opcao: "))
if numero == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.14359
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:28:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
numero = int(input("opcao: "))
if numero == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:28:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
numero = int(input("opcao: "))
if numero == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.149338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:28:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.174581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.155415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.118013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.25271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.188586
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.214423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.137751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.196235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:29:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.200425
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2443/main.py", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:29:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
raio = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    v = (pi*h**2 * (3*r - h)) /3 
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("raio: "))
h = float(input("altura: "))
n= int(input("opcao: "))
if n == 1:
	v = (pi*h**2 * (3*r - h)) /3 
else: 
	v = (4*pi*r**3)/3 - (pi*h**2 * (3*r - h))/3
print (round(v,4))
	
-- EXECUTION TIME:
0.146511
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
